{
    "name": "InputActions",
    "maps": [
        {
            "name": "Inputs",
            "id": "b18b24b9-cb24-4987-af32-eabd596ece1e",
            "actions": [
                {
                    "name": "StartFirstTouch",
                    "type": "Button",
                    "id": "cc8b723d-afc0-415c-b64c-cf511ef358c3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StartSecondTouch",
                    "type": "Button",
                    "id": "00d0900f-66d9-43c8-b19b-fc90301afa99",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirstTouchPosition",
                    "type": "Value",
                    "id": "2829a73d-2d0a-4a00-ad8a-9fdb42eb3f41",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondTouchPosition",
                    "type": "Value",
                    "id": "f6387dfc-9213-433a-a377-25fa928a76ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f30c47f-1892-4d90-837b-c795ccae77fb",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0546c467-1e26-4ee0-b603-e5e170ce2a39",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e406dd3d-83b6-4f63-8d74-0baaedb342be",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartFirstTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8f7da43-274e-43b2-8506-819390259d38",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartSecondTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MapButtons",
            "id": "33363e04-c16d-4439-8598-bdf4d200d44d",
            "actions": [
                {
                    "name": "SelectWall",
                    "type": "Button",
                    "id": "f06f4ec8-6f21-45dc-823c-d0645fa07f08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Redo",
                    "type": "Button",
                    "id": "d33e6ba6-e741-40dd-862b-8c558bf3698a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "04aad2d5-8989-4a8f-8afe-6b2ccfd60b0d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectBridge",
                    "type": "Button",
                    "id": "8ddc964a-6235-4a65-a6fe-1e98b99ca725",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectBuild",
                    "type": "Button",
                    "id": "5382e2c2-b3e0-4202-b164-f7dd694c128d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectErase",
                    "type": "Button",
                    "id": "3fe8514f-5091-41da-a554-0bfdc3b5416f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Debug",
                    "type": "Button",
                    "id": "e05d2c90-4c84-404f-80e3-ac9d9a342d41",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e11500d3-87f0-44f6-9257-387a2bb37772",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectWall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dce634a-91a3-4e80-b864-6f2f8d569152",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "177aeba2-1cee-4231-baa7-e9c9ddf21c2a",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0993538d-ba05-4f96-afce-acdb99677e88",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectBridge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ec1f836-57a9-4a37-ba9d-dc62120bb222",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectBuild",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62492837-43e3-48a0-96a4-54cb898cd5a0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectErase",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d87628c-68a0-48af-aa78-e791d7bad2c1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debug",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Zoom",
            "bindingGroup": "Zoom",
            "devices": []
        }
    ]
}